--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
  <script src="topojson.js"></script>
     <script src="bootstrap.js"></script>
     <script src="d3Project.js"></script>
-    <script src="barchart.js"></script>
-    <script src="Heatmap.js"></script>
-    <script src="Map.js"></script>
-    <script src="Scatter.js"></script>
-    <script src="Treemap2.js"></script>
+    <script src="Charts/barchart.js"></script>
+    <script src="Charts/Heatmap.js"></script>
+    <script src="Charts/Map.js"></script>
+    <script src="Charts/Scatter.js"></script>
+    <script src="Charts/Treemap2.js"></script>
 </body>
 </html>
